<resources>
    <string name="app_name">SGMOS_Cliente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_local_serv">Map</string>
    <string name="hint_login">CPF/CNPJ ou Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_cpf_cnpj">CPF ou CNPJ</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_cnpj">CNPJ</string>
    <string name="btn_seguinte">>>> Seguinte >>></string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome Completo</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTRAR</string>

    <string name="hint_bairro">Bairro</string>
    <string name="hint_ender">Endereço (Rua, N°)</string>
    <string name="hint_pontoRef">Ponto de Referência</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_fone1">Telefone 1</string>
    <string name="hint_fone2">Telefone 2</string>

    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Já esta registrado, entre por aqui.</string>
    <string name="welcome">Bem vindo</string>
    <string name="btn_logout">Desconectar</string>
    <string name="name">Fullname</string>
    <string name="email">Email</string>
    <string name="matricula">Matricula</string>
    <string name="nome">Nome</string>
    <string name="registre_se_aqui">Registre-se aqui!!!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="meus_servi_os">Meus Serviços</string>
    <string name="notifica_es">Notificações</string>
    <string name="servi_os_pendentes">Serviços Pendentes</string>
    <string name="title_activity_menu_perfil">MenuPerfilActivity</string>


    <string name="action_realizar">Realizar Serviço</string>
    <string name="action_edit_conta">EDITAR</string>
    <string name="action_salvar_conta">SALVAR</string>
    <string name="action_salvar_refri">SALVAR</string>
    <string name="action_editar_refri">EDITAR</string>

    <string name="action_salvar_ar">Salvar Dados</string>

    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_list_serv_pendente">ListServPendente</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="descri_o_refrigerador">Descrição Refrigerador:</string>
    <string name="descri_do_problema">Descrição do Problema:</string>
    <string name="descri_o_do_cliente_do_problema">Descrição do Cliente sobre Problema:</string>
    <string name="ordem_service">Ordem Service</string>
    <string name="ordem_service_finish">Finalizar</string>
    <string name="title_activity_menu_drawer">MenuDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_nav_manage">Settings</string>

    <string name="action_serv_pen">Serviços Pendentes</string>
    <string name="action_my_serv">Meus Serviços</string>
    <string name="action_notifica">Notificações</string>
    <string name="action_detal_conta">Informações</string>
    <string name="action_sair">Desconectar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="action_services">Serviços</string>
    <string name="action_refrigeradores">Refrigeradores</string>
    <string name="action_conta">Conta</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_services_cli">ServicesCliActivity</string>
    <string name="title_activity_refrigeradores_tab">RefrigeradoresTabActivity</string>
    <string name="title_activity_refrigerador_tab">RefrigeradorTabActivity</string>
    <string name="contatos">Contatos:</string>
    <string name="enderer">Endereço:</string>
</resources>

