<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.douglas.dd_os_cliente.activitys.RefrigeradorTabActivity">
    <item
        android:id="@+id/action_qr_code_refrigerador"
        android:icon="@drawable/ic_action_barcode_2"
        android:orderInCategory="100"
        android:title="@string/action_edit_conta"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_conta_refri"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_conta"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_Services_refri"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_services"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_refrigeradores_refri"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refrigeradores"
        tools:ignore="AppCompatResource" />

</menu>
