<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Endereço:"
            android:textColor="@color/cardview_light_background"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_light_background" />

        <EditText
            android:id="@+id/edit_ender"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_ender"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/edit_bairro"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_bairro"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/edit_cep"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_cep"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/edit_pont_ref"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_pontoRef"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contatos:"
            android:textColor="@color/cardview_light_background"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_light_background" />

        <EditText
            android:id="@+id/editFone1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_fone1"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/editFone2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_fone2"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

    </LinearLayout>

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

</LinearLayout>