<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.03"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/picture_frame"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="310dp"
            android:layout_height="59dp"
            android:layout_marginTop="20dip"
            android:layout_weight="0.22"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="294dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/gallery_thumb"
            android:text="@string/registre_se_aqui"
            android:textAllCaps="false"
            android:textColor="@color/btn_logut_bg"
            android:textSize="15sp" />

        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>